[gd_scene load_steps=8 format=3 uid="uid://df2dol20lmbo1"]

[ext_resource type="Theme" uid="uid://dnk8htb63eidw" path="res://assets/ui/MobileTheme.tres" id="1_yllid"]
[ext_resource type="Script" path="res://game/daily_menu/SingleDayLeaderboard.gd" id="2_l0tcj"]
[ext_resource type="Texture2D" uid="uid://dl5f8agso8p12" path="res://assets/images/ui/hint/x.png" id="2_xgyi3"]
[ext_resource type="Texture2D" uid="uid://4o1s8byoivu8" path="res://assets/images/ui/objects/timer_icon.png" id="3_6e6wl"]
[ext_resource type="Texture2D" uid="uid://beax5oseh6sd5" path="res://assets/images/icons/256_256.png" id="4_yv1kv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xfjlc"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ctcqt"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 10.0
expand_margin_bottom = 5.0

[node name="SingleDayLeaderboardMobile" type="ScrollContainer"]
custom_minimum_size = Vector2(720, 1280)
offset_right = 30.0
theme = ExtResource("1_yllid")
horizontal_scroll_mode = 0
script = ExtResource("2_l0tcj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25

[node name="Grid" type="GridContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 20
columns = 5

[node name="E1" type="Control" parent="MarginContainer/Grid"]
custom_minimum_size = Vector2(30, 40)
layout_mode = 2

[node name="E2" type="Control" parent="MarginContainer/Grid"]
layout_mode = 2

[node name="Date" type="Label" parent="MarginContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 0
text = "2024-01-01"

[node name="Mistakes" type="TextureRect" parent="MarginContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_xgyi3")
expand_mode = 3
stretch_mode = 5

[node name="Time" type="TextureRect" parent="MarginContainer/Grid"]
modulate = Color(0.670588, 1, 0.819608, 1)
layout_mode = 2
texture = ExtResource("3_6e6wl")
expand_mode = 2
stretch_mode = 5

[node name="Icon1" type="TextureRect" parent="MarginContainer/Grid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_yv1kv")
expand_mode = 1
stretch_mode = 5

[node name="PlayerBG" type="Panel" parent="MarginContainer/Grid/Icon1"]
modulate = Color(0.0156863, 0.105882, 0.219608, 0.513726)
show_behind_parent = true
layout_mode = 0
offset_left = -13.0
offset_top = -10.0
offset_right = 707.0
offset_bottom = 59.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xfjlc")

[node name="Pos1" type="Label" parent="MarginContainer/Grid"]
layout_mode = 2
text = "1."

[node name="NameContainer1" type="HBoxContainer" parent="MarginContainer/Grid"]
custom_minimum_size = Vector2(394, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 14

[node name="Flair" type="Label" parent="MarginContainer/Grid/NameContainer1"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_font_sizes/font_size = 20
text = " dev "
vertical_alignment = 1

[node name="Plus" type="Label" parent="MarginContainer/Grid/NameContainer1/Flair"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
grow_vertical = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 20
text = "+3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BG" type="Panel" parent="MarginContainer/Grid/NameContainer1/Flair"]
modulate = Color(0, 0.04, 0.14, 0.75)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ctcqt")

[node name="Space" type="Control" parent="MarginContainer/Grid/NameContainer1"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/Grid/NameContainer1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Person name"
text_overrun_behavior = 3

[node name="Mistakes1" type="Label" parent="MarginContainer/Grid"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="Time1" type="Label" parent="MarginContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "1:01:32"
horizontal_alignment = 1
